--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <img src="./Assets/Images/FELA (1).png" class="logo">
             </ul>   
             <ul class="main-menu">
-                <li>Biography</li>
+                <a href="#biography"><li>Biography</li></a>
                 <li>Credits</li>
                 <li>Songs</li>
                 <li>Performances</li>
@@ -30,24 +30,42 @@
         </nav>
     </div>
     <section class="hero"> 
-        <h1>Legendary Afro-beat King</h1>
-    </section>
-    <section id="biography">
-        <!-- <hr> -->
-        <h2>Biography</h2>
-        <div class="bio-content">
-            <div>
-                <p>Fela Kuti (born October 15, 1938 – August 2, 1997) as a Nigerian multi-instrumentalist musician and composer, pioneer of Afrobeat music,
-                    human rights activist, and political maverick. Kuti was born Olufela Olusegun Oludotun Ransome-Kuti in 
-                    Abeokuta, Ogun State, Nigeria into a middle-class family. His mother, Funmilayo Ransome-Kuti was a feminist 
-                    activist in the anti-colonial movement and his father, Reverend Israel Oludotun Ransome-Kuti, a Protestant minister 
-                    and school principal, was the first president of the Nigerian Union of Teachers.</p>
-                <button>Read more</button>   
-            </div>
-            <img src="./assets/images/Fela-Squatting-1024x1007.jpg"> 
+        <div>
+            <h1>Legendary Afro-beat King</h1>
+            <p>Biography and more of the Nigerian Fela Anikulakpo Kuti</p>
         </div>
     </section>
-    
+    <section id="biography">
+        <div class="bio-container">
+            <div class="bio-content">
+                <div class="section-title">
+                    <hr>
+                    <h1>Biography</h1>
+                </div>
+                <p>Fela Kuti (born October 15, 1938 – August 2, 1997) as a Nigerian multi-instrumentalist musician and composer, pioneer of Afrobeat music,
+                    human rights activist, and political maverick. Kuti was born Olufela Olusegun Oludotun Ransome-Kuti in 
+                    Abeokuta, Ogun State, Nigeria into a middle-class family.<br><br> His mother, Funmilayo Ransome-Kuti was a feminist 
+                    activist in the anti-colonial movement and his father, Reverend Israel Oludotun Ransome-Kuti, a Protestant minister 
+                    and school principal, was the first president of the Nigerian Union of Teachers.</p>
+                <a href="./biograpy_page/biography.html"><button>Read more</button></a>  
+            </div>
+            <div>
+                <img src="./assets//Images/fela1-600x4001.jpg">
+            </div> 
+        </div>
+    </section>
+    <!-- songs section -->
+    <section id="songs">
+        <div>
+            <h1>Songs</h1>
+            <p>FEla, as he was universally known, decided in the late 1960s that he had no use for love songs or party tunes; he wanted to 
+               challenge unjust authority. He battled Nigeria’s government, which repeatedly had him beaten and imprisoned. 
+               His music, Afrobeat — not to be confused with Afrobeats, the computer-driven pop-R&B currently emerging from Nigeria 
+               and across Africa — steered his knowledge of American funk and jazz back toward African modes and rhythms.
+            </p>
+            <a href="#"><button>Listen Here</button></a>
+        </div>
+    </section>
     <script>
         document.querySelector('.menu-btn').addEventListener('click', () => document.querySelector('.main-menu').classList.toggle('show'));
     </script>
