added performance section and the responsiveness

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <section class="hero"> 
         <div>
-            <h1>Legendary Afro-beat King</h1>
+            <h1>Legendary African Afro-beat King</h1>
             <p>Biography and more of the Nigerian Fela Anikulakpo Kuti</p>
         </div>
     </section>
@@ -58,13 +58,35 @@
     <section id="songs">
         <div>
             <h1>Songs</h1>
-            <p>FEla, as he was universally known, decided in the late 1960s that he had no use for love songs or party tunes; he wanted to 
-               challenge unjust authority. He battled Nigeria’s government, which repeatedly had him beaten and imprisoned. 
-               His music, Afrobeat — not to be confused with Afrobeats, the computer-driven pop-R&B currently emerging from Nigeria 
-               and across Africa — steered his knowledge of American funk and jazz back toward African modes and rhythms.
+            <p>Combining components of conventional highlife and jazz, Fela named is hightening musical cross breed style "Afro-beat",
+               incompletely as eveluate of African entertainers whom he felt had turned their backs on their African melodic roots in arrange to imitate
+               current American pop music patterns.
             </p>
             <a href="#"><button>Listen Here</button></a>
         </div>
+    </section>
+    <!-- performance section -->
+    <section id="performance">
+        <div class="performance-container">
+            <div class="performance-content">
+                <div class="section-title">
+                    <hr>
+                    <h1>Performances</h1>
+                </div>
+                <p>Usually, he refer to his stage act as <span class="performance-span">Underground Spiritual Game</span>. 
+                   Frequently, Fela's concerts included female vocalists and artists, afterward named as "Rulers." 
+                   The Rulers were ladies who made a different impact to the popularization of his music. <br><br> 
+                   They were dressed colorfully and wore cosmetics all over their bodies through which their visual imaginations are communicated. 
+                   The vocalists of the gather played a reinforcement part for Fela, ordinarily reverberating his words or murmuring along, 
+                   whereas the artists would put on a execution of suggestive way.</p>
+                   <a href=""><button>View more</button></a>
+            </div>
+            <div class="show-clip">
+                <video controls><source src="./Assets/Videos/videoplayback.mp4" type="video/mp4"></video>
+                <p>The father of Afro-beat, Fela Live at the Zenith, Paris 1984</p>
+            </div>
+        </div>
+        
     </section>
     <script>
         document.querySelector('.menu-btn').addEventListener('click', () => document.querySelector('.main-menu').classList.toggle('show'));
