added performace and kalakuta section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </ul>   
             <ul class="main-menu">
                 <a href="#biography"><li>Biography</li></a>
-                <li>Credits</li>
+                <!-- <li>Credits</li> -->
                 <li>Songs</li>
                 <li>Performances</li>
                 <li>Kalakuta Republic</li>
@@ -31,7 +31,7 @@
     </div>
     <section class="hero"> 
         <div>
-            <h1>Legendary African Afro-beat King</h1>
+            <h1>Legendary African<br> Afro-beat King</h1>
             <p>Biography and more of the Nigerian Fela Anikulakpo Kuti</p>
         </div>
     </section>
@@ -50,7 +50,7 @@
                 <a href="./biograpy_page/biography.html"><button>Read more</button></a>  
             </div>
             <div>
-                <img src="./assets//Images/fela1-600x4001.jpg">
+                <img src="./assets//Images/kutiK.jpg">
             </div> 
         </div>
     </section>
@@ -82,12 +82,47 @@
                    <a href=""><button>View more</button></a>
             </div>
             <div class="show-clip">
-                <video controls><source src="./Assets/Videos/videoplayback.mp4" type="video/mp4"></video>
-                <p>The father of Afro-beat, Fela Live at the Zenith, Paris 1984</p>
+                <video controls><source src="./Assets/Videos/videoplayback (1).mp4" type="video/mp4"></video>
+                <p>The father of Afro-beat, Fela Live at Berlin 1978</p>
+            </div>
+        </div>   
+    </section>
+<!-- kalakuta republic -->
+<section class="republic-outter">
+    <section id="republic">
+        <div class="republic-container">
+            <div>
+                <img src="./Assets/Images/republic1.jpg" alt="Fela Republic" class="image-1">
+                <img src="./Assets/Images/republic2.jpg" alt="Fela's home" class="image-2">
+            </div>
+            <div class="republic-content">
+                <div class="section-title">
+                    <hr>
+                    <h1>The Kalakuta Republic</h1>
+                </div>
+                <p>In 1974 Kuti was jailed on suspicion of being in possession of weed. 
+                   Kalakuta Republic title was determined from the spell Fela went through during the jail term. <br><br> 
+                   Kalakuta republic was a recording studio and commune in 1970. Due to the corruption of the then military government, 
+                   Fela felt he couldn't be portion of such and announced the Kalakuta Republic an imperial state and independent of Nigeria.
+                </p>
+                <a href=""><button>Read more</button></a>
             </div>
         </div>
-        
     </section>
+</section>
+<!-- gallery section -->
+<section id="gallery">
+    <div class="section-title2">
+        <h1>Photo Speaks</h1>
+    </div>
+    <div class="slider-container">
+        <img src="./Assets/Images/anikulapo.jpg">
+        <img src="./Assets/Images/anikulapo2.jpg">
+        <img src="./Assets/Images/anikulapo3.jpg">
+        <img src="./Assets/Images/anikulapo4.jpg">
+    </div>
+    <a href="#"><button>View gallery</button></a>
+</section>
     <script>
         document.querySelector('.menu-btn').addEventListener('click', () => document.querySelector('.main-menu').classList.toggle('show'));
     </script>
