added biography page

--- a/biograpy_page/biography.html
+++ b/biograpy_page/biography.html
@@ -4,9 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biography</title>
+    <link type="text/css" rel="stylesheet" href="./biography.css">
+    <link type="text/css" rel="stylesheet" href="../style.css">
+    <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <title>Fela | Biography, Life and Shows</title>
 </head>
 <body>
-    
+    <div class="container">
+        <nav class="main-nav">
+            <ul>
+                <a href="../index.html"><img src="../Assets/Images/F-Logo-remove.png" class="logo"></a>
+            </ul>   
+            <ul class="main-menu">
+                <li>Biography</li>
+                <li>Songs</li>
+                <li>Performances</li>
+                <li>Kalakuta Republic</li>
+            </ul>
+            <ul class="right-menu">
+                <img src="../Assets/Images/icons8-photo-gallery.gif">
+            </ul>
+        </nav>
+    </div>
+    <section id="biography">
+        <div class="bio-container">
+            <div>
+                <img src="../Assets/Images/fela-singing.jpg">
+            </div>
+            <div class="bio-content">
+            <div class="section-title">
+                <hr>
+                <h1>BIOGRAPHY</h1>
+            </div>
+                <P>
+                Born October 15, 1938 in Abeokuta, Nigeria and died August 2, 1997 in Lagos Fela Anikulapo-Kuti, 
+                also named Olufela Olusegun Oludotun Ransome-Kuti is Nigerian musician and activist who pioneered a modern style of music called Afro-beat, 
+                which fused the traditional Yoruba music, Jazz, American blues, and funk. <br> <br>
+                Being a young enthusiastic person, Fela would run for miles to go to conventional celebrations within the range, 
+                as of now feeling that the true African culture of his precursors need to be protected. 
+                His parents sent him to London in 1958, but instead of studying medicine like his two brothers and his sister, 
+                Fela chose to enroll within the Trinity School of Music, where he was to spend another five long year. 
+                During his time as a student(aged 23), Fela married a Nigerian girl called Remi and they both had three children. <br> <br>
+                The anti-Fela sentiment within the government reached a new peak at this time, 
+                prompting him to establish his own political party in 1979 - the Movement of the People(MOP), 
+                and was unsuccessful during his run for the Office of the President of the Federal Republic of Nigeria. 
+                Five years afterward he was imprisoned for 20 months on charges of smuggling money. 
+                He turned away from dynamic politics upon his discharge from prison. 
+                His child, Femi, was left to carry the burn of Afro-beat music. Fela was imprisoned once more in 1993 for killing, 
+                but the charges were inevitably dropped. He passed on as a result of complications from AIDs-related illness at the age of 58.
+                </P>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
