--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             </ul>   
             <ul class="main-menu">
                 <a href="#biography"><li>Biography</li></a>
-                <li>Songs</li>
-                <li>Performances</li>
-                <li>Kalakuta Republic</li>
+                <a href="#songs"><li>Songs</li></a>
+                <a href="#performance"><li>Performances</li></a>
+                <a href="#republic"><li>Kalakuta Republic</li></a>
             </ul>
             <ul class="right-menu">
                 <img src="./Assets/Images/icons8-photo-gallery.gif">
@@ -61,7 +61,7 @@
                incompletely as eveluate of African entertainers whom he felt had turned their backs on their African melodic roots in arrange to imitate
                current American pop music patterns.
             </p>
-            <a href="#"><button>Listen Here</button></a>
+            <a href="./song_page/songs.html"><button>Listen Here</button></a>
         </div>
     </section>
     <!-- performance section -->
@@ -78,7 +78,7 @@
                    They were dressed colorfully and wore cosmetics all over their bodies through which their visual imaginations are communicated. 
                    The vocalists of the gather played a reinforcement part for Fela, ordinarily reverberating his words or murmuring along, 
                    whereas the artists would put on a execution of suggestive way.</p>
-                   <a href=""><button>View more</button></a>
+                   <a href="./performance_page/performance.html"><button>View more</button></a>
             </div>
             <div class="show-clip">
                 <video controls><source src="./Assets/Videos/videoplayback (1).mp4" type="video/mp4"></video>
@@ -104,7 +104,7 @@
                    Kalakuta republic was a recording studio and commune in 1970. Due to the corruption of the then military government, 
                    Fela felt he couldn't be portion of such and announced the Kalakuta Republic an imperial state and independent of Nigeria.
                 </p>
-                <a href=""><button>Read more</button></a>
+                <a href="./kalakuta_page/kalakuta.html"><button>Read more</button></a>
             </div>
         </div>
     </section>
@@ -159,7 +159,7 @@
             </div>
         </li>
     </ul>
-    <a href="#"><button>View gallery</button></a>
+    <a href="./gallery_page/gallery.html"><button>View gallery</button></a>
 </section>
 <footer>
     <nav class="foot-nav">
