--- a/kalakuta_page/kalakuta.html
+++ b/kalakuta_page/kalakuta.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./songs.css" type="text/css">
+    <link rel="stylesheet" href="./kalakuta.css" type="text/css">
     <link type="text/css" rel="stylesheet" href="../style.css">
     <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <title>Fela | Biography, Life and Shows</title>
 </head>
-<body> 
+<body>
     <div class="container">
         <nav class="main-nav">
             <ul>
@@ -25,6 +25,6 @@
                 <img src="../Assets/Images/icons8-photo-gallery.gif">
             </ul>
         </nav>
-    </div>   
+    </div> 
 </body>
 </html>
