added little changes to the landing page

--- a/biograpy_page/biography.html
+++ b/biograpy_page/biography.html
@@ -56,5 +56,45 @@
             </div>
         </div>
     </section>
+    <section id="activism">
+        <div class="title">
+            <h1>ACTIVISM</h1>
+        </div>
+        <div class="title-content">
+            <p>
+                After his return from Europe, he moved to Ikeja and set up a new club, which became a hotbed for drug activities. 
+                The torch vocalist, who spun over the console as he sang in English and Yoruba, struck a chord among the unemployed, impeded, and abused. 
+                His politically charged melodies, which censured persecution by Nigeria's military government, incited authorities to raid his club routinely, 
+                searching for reasons to imprison him. Close there he moreover set up a communal compound, which he announced the autonomous Kalakuta Republic. 
+                For over twenty years, he got to be celebrated as a representative for the awesome mass of individuals, 
+                in Nigeria and somewhere else in Africa and the African diaspora who were embittered with the period of post-independence. <br> <br>
+                His health began failing in the early 1990s. After being arrested in 1993 again, for murder, 
+                with three of his 'Afrika '70' bandmates, Kuti slowed down and began producing less music, leaving his son, Femi to continue his legacy. 
+                He will live until the end of time! Fela was maintained by the unrestricted adore and regard advertised to him by the millions of 
+                individuals whose lives he touched all through his life. In passing, he holds the amazing status to which he was lifted by the 
+                throngs of individuals who came to pay their final regards at his laying in state in Tafa Balewa Square.
+            </p>
+        </div>
+    </section>
+    <footer>
+        <nav class="foot-nav">
+            <ul>
+                <img src="../Assets/Images/F-Logo-remove.png" alt="logo" class="logo-2">
+            </ul>
+            <ul class="foot-menu">
+                <li>Blog</li>
+                <li>|</li>
+                <li>Support</li>
+                <li>|</li>
+                <li>About</li>
+            </ul>
+            <ul class="contact">
+                <li>FCT - Abuja, Nigeria</li>
+                <li>|</li>
+                <li>Xster-Cee:(+234)8143718171</li>
+            </ul>
+        </nav>
+        <p>&copy;2023</p>
+    </footer>
 </body>
 </html>
