--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <p>Biography and more of the Nigerian Fela Anikulakpo Kuti</p>
         </div>
     </section>
+    <!-- biography section -->
     <section id="biography">
         <div class="bio-container">
             <div class="bio-content">
@@ -164,22 +165,22 @@
 <footer>
     <nav class="foot-nav">
         <ul>
-            <img src="./Assets/Images/F-Logo-remove.png" alt="logo" class="logo">
+            <img src="./Assets/Images/F-Logo-remove.png" alt="logo" class="logo-2">
         </ul>
         <ul class="foot-menu">
-            <li>Blog</li>
+            <li>Our Portfolio</li>
             <li>|</li>
-            <li>Support</li>
+            <li>Trainings</li>
             <li>|</li>
-            <li>About</li>
+            <li>About Us</li>
         </ul>
         <ul class="contact">
             <li>FCT - Abuja, Nigeria</li>
             <li>|</li>
-            <li>Xster-Cee:(+234)8143718171</li>
+            <li>Xster-Cee: (+234)8143718171</li>
         </ul>
     </nav>
-    <p>&copy;2023</p>
+    <p>&copy; CodeSpac 2023</p>
 </footer>
     <script>
         document.querySelector('.menu-btn').addEventListener('click', () => document.querySelector('.main-menu').classList.toggle('show'));
