--- a/song_page/songs.html
+++ b/song_page/songs.html
@@ -25,6 +25,27 @@
                 <img src="../Assets/Images/icons8-photo-gallery.gif">
             </ul>
         </nav>
-    </div>   
+    </div>
+    
+    <footer>
+        <nav class="foot-nav">
+            <ul>
+                <img src="../Assets/Images/F-Logo-remove.png" alt="logo" class="logo-2">
+            </ul>
+            <ul class="foot-menu">
+                <li>Our Portfolio</li>
+                <li>|</li>
+                <li>Trainings</li>
+                <li>|</li>
+                <li>About Us</li>
+            </ul>
+            <ul class="contact">
+                <li>FCT - Abuja, Nigeria</li>
+                <li>|</li>
+                <li>Xster-Cee: (+234)8143718171</li>
+            </ul>
+        </nav>
+        <p>&copy; CodeSpac 2023</p>
+    </footer>
 </body>
 </html>
