--- a/gallery_page/gallery.html
+++ b/gallery_page/gallery.html
@@ -26,5 +26,26 @@
             </ul>
         </nav>
     </div>
+
+    <footer>
+        <nav class="foot-nav">
+            <ul>
+                <img src="../Assets/Images/F-Logo-remove.png" alt="logo" class="logo-2">
+            </ul>
+            <ul class="foot-menu">
+                <li>Our Portfolio</li>
+                <li>|</li>
+                <li>Trainings</li>
+                <li>|</li>
+                <li>About Us</li>
+            </ul>
+            <ul class="contact">
+                <li>FCT - Abuja, Nigeria</li>
+                <li>|</li>
+                <li>Xster-Cee: (+234)8143718171</li>
+            </ul>
+        </nav>
+        <p>&copy; CodeSpac 2023</p>
+    </footer>
 </body>
 </html>
