did some corrections on the landing page

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <input type="radio" name="radio-button" id="img-1" checked>
         <li class="slide-container">
             <div class="slide">
-                <img src="./Assets/Images/kalakuta 4.jpg">
+                <img src="./Assets/Images/Fela-and-his-Queens.jpg">
             </div>
             <div class="nav">
                 <label for="img-4" class="prev">&#x2039;</label>
